_build/_log
### Starting build.
# Target: kawac.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:kawac.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules kawac.ml > kawac.ml.depends # cached
# Target: kawa2pimp.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:kawa2pimp.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules kawa2pimp.ml > kawa2pimp.ml.depends
# Target: aux.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:aux.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules aux.ml > aux.ml.depends # cached
# Target: aux_type.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:aux_type.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules aux_type.ml > aux_type.ml.depends # cached
# Target: kawa.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:kawa.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules kawa.ml > kawa.ml.depends # cached
# Target: kawa.cmo, tags: { bin_annot, byte, compile, debug, explain, extension:cmo, extension:ml, file:kawa.cmo, file:kawa.ml, implem, ocaml, quiet, traverse, use_menhir }
ocamlc.opt -c -g -bin-annot -o kawa.cmo kawa.ml # cached
# Target: pimp.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:pimp.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules pimp.ml > pimp.ml.depends # cached
# Target: pimp.cmo, tags: { bin_annot, byte, compile, debug, explain, extension:cmo, extension:ml, file:pimp.cmo, file:pimp.ml, implem, ocaml, quiet, traverse, use_menhir }
ocamlc.opt -c -g -bin-annot -o pimp.cmo pimp.ml # cached
# Target: aux_type.cmo, tags: { bin_annot, byte, compile, debug, explain, extension:cmo, extension:ml, file:aux_type.cmo, file:aux_type.ml, implem, ocaml, quiet, traverse, use_menhir }
ocamlc.opt -c -g -bin-annot -o aux_type.cmo aux_type.ml # cached
# Target: aux.cmo, tags: { bin_annot, byte, compile, debug, explain, extension:cmo, extension:ml, file:aux.cmo, file:aux.ml, implem, ocaml, quiet, traverse, use_menhir }
ocamlc.opt -c -g -bin-annot -o aux.cmo aux.ml # cached
# Target: kawalexer.mll, tags: { bin_annot, debug, explain, extension:mll, file:kawalexer.mll, lexer, ocaml, ocamllex, quiet, traverse, use_menhir }
ocamllex.opt -q kawalexer.mll # cached
# Target: kawalexer.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:kawalexer.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules kawalexer.ml > kawalexer.ml.depends # cached
# Target: kawaparser.mly.depends, tags: { bin_annot, debug, explain, extension:mly, file:kawaparser.mly, infer, menhir_ocamldep, ocaml, ocamldep, quiet, traverse, use_menhir }
menhir --raw-depend --ocamldep 'ocamldep.opt -modules' kawaparser.mly > kawaparser.mly.depends # cached
# Target: kawaparser.mly, tags: { bin_annot, byte, compile, debug, explain, extension:ml, extension:mly, file:kawaparser.ml, file:kawaparser.mly, infer, menhir, ocaml, parser, quiet, traverse, use_menhir }
menhir --ocamlc 'ocamlc.opt -g -bin-annot' --explain --infer kawaparser.mly # cached
# Target: kawaparser.mli.depends, tags: { bin_annot, debug, explain, extension:mli, file:kawaparser.mli, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules kawaparser.mli > kawaparser.mli.depends # cached
# Target: kawaparser.cmi, tags: { bin_annot, byte, compile, debug, explain, extension:mli, file:kawaparser.mli, interf, ocaml, quiet, traverse, use_menhir }
ocamlc.opt -c -g -bin-annot -o kawaparser.cmi kawaparser.mli # cached
# Target: pimppp.ml.depends, tags: { bin_annot, debug, explain, extension:ml, file:pimppp.ml, ocaml, ocamldep, quiet, traverse, use_menhir }
ocamldep.opt -modules pimppp.ml > pimppp.ml.depends # cached
# Target: kawa2pimp.cmo, tags: { bin_annot, byte, compile, debug, explain, extension:cmo, extension:ml, file:kawa2pimp.cmo, file:kawa2pimp.ml, implem, ocaml, quiet, traverse, use_menhir }
ocamlc.opt -c -g -bin-annot -o kawa2pimp.cmo kawa2pimp.ml
+ ocamlc.opt -c -g -bin-annot -o kawa2pimp.cmo kawa2pimp.ml
File "kawa2pimp.ml", line 37, characters 11-20:
37 |           |Typ_Class clazz -> 
                ^^^^^^^^^
Error: Unbound constructor Typ_Class
Command exited with code 2.
# Compilation unsuccessful.
